--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
   "build>=1.2",
+  "httpx>=0.27",
   "mypy>=1.9",
   "pytest>=8.1",
   "ruff>=0.4",
