--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,23 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    timeout-minutes: 45
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: pip
+      - name: Verify self-hosted runner prerequisites
+        run: ./scripts/verify_self_hosted_runner.sh
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e ".[dev]"
       - name: Run checks
         run: make check
+      - name: Run smoke test
+        run: make smoke
+      - name: Build package
+        run: make build
