--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
   gitleaks:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-      - uses: gitleaks/gitleaks-action@v2
-        env:
-          GITLEAKS_LICENSE: ""
+      - name: Verify self-hosted runner prerequisites
+        run: ./scripts/verify_self_hosted_runner.sh
+      - name: Run gitleaks scan
+        run: ./scripts/run_gitleaks.sh
